# bempp-rs-for-rsrs

./: Cargo.toml
examples/: function_evaluator.rs  laplace_evaluator.rs  neighbour_evaluator.rs  singular_assembler_test.rs  test_green_evaluators.rs
src/: evaluator_tools.rs  function.rs  shapes.rs
src/boundary_assemblers/: helpers.rs
src/greens_function_evaluators/: dense_evaluator.rs  kifmm_evaluator.rs
